--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Mone - Personal Portfolio Template</title>
+    <title>Ayush - Personal Portfolio</title>
     <!-- Favicon -->
     <link href="assets/images/favicon.png" rel="shortcut icon">
     <!-- CSS -->
@@ -62,7 +62,8 @@
         overflow: hidden;
     }
 
-    #main #top-h1, #main #bottom-h1 {
+    #main #top-h1,
+    #main #bottom-h1 {
         font-size: 22vw;
         position: absolute;
         top: 50%;
@@ -135,7 +136,7 @@
         font-size: 15vw !important;
         color: #ffffff !important;
         white-space: nowrap;
-        
+
     }
 </style>
 
@@ -151,7 +152,7 @@
             <div class="header-wrapper">
                 <!-- Header Logo -->
                 <div class="header-logo">
-                    <h2>Mone</h2>
+                    <h2>AK_PORTFOLIO</h2>
                 </div>
                 <!-- Header Nav -->
                 <div class="header-nav">
@@ -207,11 +208,8 @@
                         <h1 class="hero-heading display-1 fw-bold mb-0 stroke-text">Ayush Kumar</h1>
                     </div>
                 </div>
-                <!-- end row -->
             </div>
-            <!-- end container -->
         </div>
-        <!-- end Hero section -->
 
         <!-- About section -->
         <div class="container">
@@ -479,7 +477,7 @@
                                     <!-- Image -->
                                     <div class="portfolio-img">
                                         <a href="portfolio-single.html">
-                                            <img src="assets/images/portfolio-1.jpg" alt="">
+                                            <img src="assets/images/recentwork1.png" alt="">
                                         </a>
                                     </div>
                                     <div class="pt-4">
@@ -487,7 +485,7 @@
                                         <ul class="list-inline-dot sm-heading text-white mb-2">
                                             <li>
                                                 <a class="link-hover" href="#">
-                                                    <span data-text="Visual Art">Visual Art</span>
+                                                    <span data-text="GSAP Modeling">GSAP Modeling</span>
                                                 </a>
                                             </li>
                                             <li>
@@ -500,7 +498,7 @@
                                         <h2>
                                             <a class="portfolio-caption" href="portfolio-single.html">
                                                 <i class="bi bi-arrow-right"></i>
-                                                Fold Twist Abstract
+                                                Service Based
                                             </a>
                                         </h2>
                                     </div>
@@ -513,7 +511,7 @@
                                     <!-- Image -->
                                     <div class="portfolio-img">
                                         <a href="portfolio-single.html">
-                                            <img src="assets/images/portfolio-2.jpg" alt="">
+                                            <img src="assets/images/recentwork4.png" alt="">
                                         </a>
                                     </div>
                                     <div class="pt-4">
@@ -521,12 +519,12 @@
                                         <ul class="list-inline-dot sm-heading text-white mb-2">
                                             <li>
                                                 <a class="link-hover" href="#">
-                                                    <span data-text="3D Modeling">3D Modeling</span>
+                                                    <span data-text="UX Design">UX Design</span>
                                                 </a>
                                             </li>
                                             <li>
                                                 <a class="link-hover" href="#">
-                                                    <span data-text="Visual Art">Visual Art</span>
+                                                    <span data-text="GSAP Animation">GSAP Animation</span>
                                                 </a>
                                             </li>
                                             <li>
@@ -539,20 +537,17 @@
                                         <h2>
                                             <a class="portfolio-caption" href="portfolio-single.html">
                                                 <i class="bi bi-arrow-right"></i>
-                                                Colors of Circle
+                                                LAZAREV.
                                             </a>
                                         </h2>
                                     </div>
                                 </div>
-                                <!-- end portfolio-box -->
                             </div>
-                            <!-- Slider Item 3 -->
                             <div class="swiper-slide">
                                 <div class="portfolio-box">
-                                    <!-- Image -->
                                     <div class="portfolio-img">
                                         <a href="portfolio-single.html">
-                                            <img src="assets/images/portfolio-3.jpg" alt="">
+                                            <img src="assets/images/recentwork5.png" alt="">
                                         </a>
                                     </div>
                                     <div class="pt-4">
@@ -560,7 +555,12 @@
                                         <ul class="list-inline-dot sm-heading text-white mb-2">
                                             <li>
                                                 <a class="link-hover" href="#">
-                                                    <span data-text="Visual Art">Visual Art</span>
+                                                    <span data-text="AdminPanel">AdminPanel</span>
+                                                </a>
+                                            </li>
+                                            <li></li>
+                                                <a class="link-hover" href="#">
+                                                    <span data-text="Login">Login</span>
                                                 </a>
                                             </li>
                                             <li>
@@ -573,7 +573,7 @@
                                         <h2>
                                             <a class="portfolio-caption" href="portfolio-single.html">
                                                 <i class="bi bi-arrow-right"></i>
-                                                Fold Twist Abstract
+                                               ECOMMERCE SOFTWARE
                                             </a>
                                         </h2>
                                     </div>
@@ -586,7 +586,7 @@
                                     <!-- Image -->
                                     <div class="portfolio-img">
                                         <a href="portfolio-single.html">
-                                            <img src="assets/images/portfolio-4.jpg" alt="">
+                                            <img src="assets/images/recentwork6.png" alt="">
                                         </a>
                                     </div>
                                     <div class="pt-4">
@@ -607,39 +607,34 @@
                                         <h2>
                                             <a class="portfolio-caption" href="portfolio-single.html">
                                                 <i class="bi bi-arrow-right"></i>
-                                                Visual Art of Cubes
+                                                VIDEO MANIPULATION
                                             </a>
                                         </h2>
                                     </div>
                                 </div>
-                                <!-- end portfolio-box -->
                             </div>
-                            <!-- end Slider Item 4 -->
                         </div>
-                        <!-- end swiper-wrapper -->
                     </div>
-                    <!-- end portfolio-slider -->
                 </div>
-                <!-- end container -->
             </div>
         </div>
-        <!-- end Portfolio section -->
 
         <div id="awards" class="section pb-0">
             <div id="main">
                 <div id="top">
-                    <h1 id="top-h1">GALLERY</h1>
+                    <h1 id="top-h1">SERVICES</h1>
                 </div>
                 <div id="center">
                     <div class="content">
                         <div class="container c1">
-                            <h1>WEB DEVELOPMENT &#8226; UI/UX DESIGN &#8226; LARAVEL &#8226; ROBUST API &#8226; WEB SERVICE
+                            <h1>WEB DEVELOPMENT &#8226; UI/UX DESIGN &#8226; LARAVEL &#8226; ROBUST API &#8226; WEB
+                                SERVICE
                                 SOLUTION</h1>
                         </div>
                     </div>
                 </div>
                 <div id="bottom">
-                    <h1 id="bottom-h1">GALLERY</h1>
+                    <h1 id="bottom-h1">SERVICES</h1>
                 </div>
             </div>
         </div>
@@ -694,11 +689,10 @@
         <!-- end Awards section -->
 
         <!-- Testimonial section -->
-        <div id="testimonial" class="section">
+        <!-- <div id="testimonial" class="section">
             <div class="container">
                 <div class="swiper testimonial-slider">
                     <div class="swiper-wrapper">
-                        <!-- Slider item 1 -->
                         <div class="swiper-slide">
                             <div class="testimonial-box">
                                 <div class="testimonial-avatar">
@@ -715,7 +709,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Slider item 2 -->
                         <div class="swiper-slide">
                             <div class="testimonial-box">
                                 <div class="testimonial-avatar">
@@ -732,7 +725,6 @@
                                 </div>
                             </div>
                         </div>
-                        <!-- Slider item 3 -->
                         <div class="swiper-slide">
                             <div class="testimonial-box">
                                 <div class="testimonial-avatar">
@@ -750,13 +742,10 @@
                             </div>
                         </div>
                     </div>
-                    <!-- Slider Pagination Progress -->
                     <div class="swiper-testimonial-pagination"></div>
-                    <!-- end Slider Pagination Progress -->
                 </div>
             </div>
-            <!-- end container -->
-        </div>
+        </div> -->
         <!-- end Testimonial section -->
 
         <!-- Blog section -->
@@ -767,9 +756,8 @@
                         <div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
                             <span class="title-heading text-white-04">Journal</span>
                             <h1 class="display-3 fw-medium">Blog <span class="text-gradient">Posts</span></h1>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                                incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
-                                exercitation</p>
+                            <p>Elevating your digital presence with customized, high-performance web solutions designed
+                                to meet your business needs.</p>
                             <!-- Slider Nav -->
                             <div class="mt-4">
                                 <div class="swiper-blog-prev button-circle cursor-link">
@@ -792,7 +780,7 @@
                                 <div class="blog-post-box">
                                     <div class="blog-post-img">
                                         <!-- Image -->
-                                        <a class="blog-post-img-link" href="blog-single.html">
+                                        <a class="blog-post-img-link" href="#">
                                             <img src="assets/images/blog-1.jpg" alt="">
                                         </a>
                                         <!-- Category -->
@@ -816,7 +804,7 @@
                                             </li>
                                         </ul>
                                         <h2 class="mb-0">
-                                            <a class="blog-caption" href="blog-single.html">
+                                            <a class="blog-caption" href="#">
                                                 <i class="bi bi-arrow-right"></i>
                                                 The Art of Coffee Making
                                             </a>
@@ -829,7 +817,7 @@
                                 <div class="blog-post-box">
                                     <div class="blog-post-img">
                                         <!-- Image -->
-                                        <a class="blog-post-img-link" href="blog-single.html">
+                                        <a class="blog-post-img-link" href="#">
                                             <img src="assets/images/blog-2.jpg" alt="">
                                         </a>
                                         <!-- Category -->
@@ -853,7 +841,7 @@
                                             </li>
                                         </ul>
                                         <h2 class="mb-0">
-                                            <a class="blog-caption" href="blog-single.html">
+                                            <a class="blog-caption" href="#">
                                                 <i class="bi bi-arrow-right"></i>
                                                 Optimizing Work Enviroment
                                             </a>
@@ -866,7 +854,7 @@
                                 <div class="blog-post-box">
                                     <div class="blog-post-img">
                                         <!-- Image -->
-                                        <a class="blog-post-img-link" href="blog-single.html">
+                                        <a class="blog-post-img-link" href="#">
                                             <img src="assets/images/blog-3.jpg" alt="">
                                         </a>
                                         <!-- Category -->
@@ -890,7 +878,7 @@
                                             </li>
                                         </ul>
                                         <h2 class="mb-0">
-                                            <a class="blog-caption" href="blog-single.html">
+                                            <a class="blog-caption" href="#">
                                                 <i class="bi bi-arrow-right"></i>
                                                 How I come up with New Ideas
                                             </a>
@@ -903,7 +891,7 @@
                                 <div class="blog-post-box">
                                     <div class="blog-post-img">
                                         <!-- Image -->
-                                        <a class="blog-post-img-link" href="blog-single.html">
+                                        <a class="blog-post-img-link" href="#">
                                             <img src="assets/images/blog-4.jpg" alt="">
                                         </a>
                                         <!-- Category -->
@@ -927,7 +915,7 @@
                                             </li>
                                         </ul>
                                         <h2 class="mb-0">
-                                            <a class="blog-caption" href="blog-single.html">
+                                            <a class="blog-caption" href="#">
                                                 <i class="bi bi-arrow-right"></i>
                                                 Hard work and Patience
                                             </a>
@@ -957,11 +945,11 @@
                         <div class="row g-4 g-lg-5">
                             <div class="col-12 col-md-6">
                                 <h6 class="sm-heading">Email:</h6>
-                                <h3 class="mb-0">contact@flatheme.net</h3>
+                                <h3 class="mb-0">akgoswami086@gmail.com</h3>
                             </div>
                             <div class="col-12 col-md-6">
                                 <h6 class="sm-heading">Call:</h6>
-                                <h3 class="mb-0">+123 456 7890</h3>
+                                <h3 class="mb-0">+6200060278</h3>
                             </div>
                         </div>
                         <!-- end row(inner) -->
@@ -993,8 +981,8 @@
                 </div>
                 <!-- end row -->
                 <!-- Google Maps -->
-                <div id="map1" class="gmap gmap-md border-radius-1 mt-5" data-latitude="51.513569"
-                    data-longitude="-0.123443"></div>
+                <!-- <div id="map1" class="gmap gmap-md border-radius-1 mt-5" data-latitude="51.513569"
+                    data-longitude="-0.123443"></div> -->
                 <!-- end Google Maps -->
             </div>
             <!-- end container -->
@@ -1005,7 +993,7 @@
 
     <!-- Footer -->
     <div class="py-4 py-lg-5 text-center">
-        <p>&copy; 2024 FlaTheme, All Rights Reserved.</p>
+        <p>&copy; 2024 AK_PORTFOLIO, All Rights Reserved.</p>
     </div>
     <!-- end Footer -->
 
@@ -1059,9 +1047,9 @@
                 marginTop: "0%",
             })
             .to(".c1 h1", {
-                xPercent: -100,  
-                duration: 3,     
-                ease: "none",    
+                xPercent: -100,
+                duration: 3,
+                ease: "none",
             });
 
 
