--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         position: absolute;
         top: 0%;
         width: 100%;
-        height: 49.4vh;
+        height: 50vh;
         background-color: rgb(255, 255, 255);
         z-index: 9;
         overflow: hidden;
@@ -57,19 +57,20 @@
         position: absolute;
         bottom: 0;
         width: 100%;
-        height: 49.8vh;
+        height: 50vh;
         background-color: rgb(255, 255, 255);
         overflow: hidden;
     }
 
     #main #top-h1,
     #main #bottom-h1 {
-        font-size: 22vw;
+        font-size: 20vw;
         position: absolute;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
         color: rgb(0, 0, 0);
+        font-weight: 800;
     }
 
     #top-h1 {
@@ -1037,7 +1038,7 @@
                 bottom: "-50%",
             }, 'a')
             .to("#top-h1", {
-                top: "60%",
+                top: "30%",
             }, 'a')
             .to("#bottom-h1", {
                 bottom: "-30%",
@@ -1051,8 +1052,6 @@
                 duration: 3,
                 ease: "none",
             });
-
-
 
     </script>
 </body>
